--- a/.gitignore
+++ b/.gitignore
@@ -1,102 +1,115 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Created by https://www.toptal.com/developers/gitignore/api/intellij,maven,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=intellij,maven,java
 
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# Created by https://www.gitignore.io/api/git,java,maven,eclipse,windows
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
-### Eclipse ###
+# AWS User-specific
+.idea/**/aws.xml
 
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
+# Generated files
+.idea/**/contentModel.xml
 
-# External tool builders
-.externalToolBuilders/
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
-# Locally stored "Eclipse launch configurations"
-*.launch
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
 
-# PyDev specific (Python IDE for Eclipse)
-*.pydevproject
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
-# CDT-specific (C/C++ Development Tooling)
-.cproject
+# CMake
+cmake-build-*/
 
-# CDT- autotools
-.autotools
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
 
-# Java annotation processor (APT)
-.factorypath
+# File-based project format
+*.iws
 
-# PDT-specific (PHP Development Tools)
-.buildpath
+# IntelliJ
+out/
 
-# sbteclipse plugin
-.target
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# Tern plugin
-.tern-project
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# TeXlipse plugin
-.texlipse
+# Cursive Clojure plugin
+.idea/replstate.xml
 
-# STS (Spring Tool Suite)
-.springBeans
+# SonarLint plugin
+.idea/sonarlint/
 
-# Code Recommenders
-.recommenders/
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
-# Annotation Processing
-.apt_generated/
+# Editor-based Rest Client
+.idea/httpRequests
 
-# Scala IDE specific (Scala & Java development for Eclipse)
-.cache-main
-.scala_dependencies
-.worksheet
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
 
-### Eclipse Patch ###
-# Eclipse Core
-.project
+### Intellij Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
 
-# Annotation Processing
-.apt_generated
+# Sonarlint plugin
+# https://plugins.jetbrains.com/plugin/7973-sonarlint
+.idea/**/sonarlint/
 
-.sts4-cache/
+# SonarQube Plugin
+# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
+.idea/**/sonarIssues.xml
 
-### Git ###
-# Created by git for backups. To disable backups in Git:
-# $ git config --global mergetool.keepBackup false
-*.orig
+# Markdown Navigator plugin
+# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
+.idea/**/markdown-navigator.xml
+.idea/**/markdown-navigator-enh.xml
+.idea/**/markdown-navigator/
 
-# Created by git when using merge tools for conflicts
-*.BACKUP.*
-*.BASE.*
-*.LOCAL.*
-*.REMOTE.*
-*_BACKUP_*.txt
-*_BASE_*.txt
-*_LOCAL_*.txt
-*_REMOTE_*.txt
+# Cache file creation bug
+# See https://youtrack.jetbrains.com/issue/JBR-2257
+.idea/$CACHE_FILE$
+
+# CodeStream plugin
+# https://plugins.jetbrains.com/plugin/12206-codestream
+.idea/codestream.xml
 
 ### Java ###
 # Compiled class file
@@ -122,6 +135,7 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+replay_pid*
 
 ### Maven ###
 target/
@@ -133,32 +147,13 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-
-# End of https://www.gitignore.io/api/git,java,maven,eclipse,windows
+# End of https://www.toptal.com/developers/gitignore/api/intellij,maven,java
